--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,29 +1,27 @@
 ---
 ---
-
-
 @article{10.1145/3761812,
-author = {Subramaniyan, Srinivasan and Wang, Xiaorui},
-title = {FC-GPU: Feedback Control GPU Scheduling for Real-time Embedded Systems},
-year = {2025},
-issue_date = {September 2025},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-volume = {24},
-number = {5s},
-issn = {1539-9087},
-url = {https://doi.org/10.1145/3761812},
-doi = {10.1145/3761812},
-google_scholar_id={qyhmnyLat1gC},
-pdf={example_pdf.pdf},
-code={},
-slides={},
-abstract = {GPUs have recently been adopted in many real-time embedded systems. However, existing GPU scheduling solutions are mostly open-loop and rely on the estimation of worst-case execution time (WCET). Although adaptive solutions, such as feedback control scheduling, have been previously proposed to handle this challenge for CPU-based real-time tasks, they cannot be directly applied to GPU, because GPUs have different and more complex architectures and so schedulable utilization bounds cannot apply to GPUs yet. In this article, we propose FC-GPU, the first Feedback Control GPU scheduling framework for real-time embedded systems. To model the GPU resource contention among tasks, we analytically derive a multi-input-multi-output (MIMO) system model that captures the impacts of task rate adaptation on the response times of different tasks. Building on this model, we design a MIMO controller that dynamically adjusts task rates based on measured response times. Our extensive hardware testbed results on an Nvidia RTX 3090 GPU and an AMD MI-100 GPU demonstrate that FC-GPU can provide better real-time performance even when the task execution times significantly increase at runtime.},
-journal = {ACM Trans. Embed. Comput. Syst.},
-month = sep,
-articleno = {155},
-numpages = {25},
-keywords = {GPU scheduling, real-time, embedded systems, feedback control}
+author       = {Subramaniyan, Srinivasan and Wang, Xiaorui},
+title        = {FC-GPU: Feedback Control GPU Scheduling for Real-Time Embedded Systems},
+year         = {2025},
+issue_date   = {September 2025},
+publisher    = {Association for Computing Machinery},
+address      = {New York, NY, USA},
+volume       = {24},
+number       = {5s},
+issn         = {1539-9087},
+url          = {https://doi.org/10.1145/3761812},
+doi          = {10.1145/3761812},
+google_scholar_id = {qyhmnyLat1gC},
+pdf          = {3761812.pdf},
+code         = {https://github.com/srinivasans74?tab=repositories},
+slides       = {slides/1-325-Subramaniyan-pres.pptx},
+abstract     = {GPUs have recently been adopted in many real-time embedded systems. However, existing GPU scheduling solutions are mostly open-loop and rely on the estimation of worst-case execution time (WCET). Although adaptive solutions, such as feedback control scheduling, have been previously proposed to handle this challenge for CPU-based real-time tasks, they cannot be directly applied to GPUs, because GPUs have different and more complex architectures and so schedulable utilization bounds cannot apply to GPUs yet. In this article, we propose FC-GPU, the first feedback control GPU scheduling framework for real-time embedded systems. To model the GPU resource contention among tasks, we analytically derive a multi-input–multi-output (MIMO) system model that captures the impacts of task rate adaptation on the response times of different tasks. Building on this model, we design a MIMO controller that dynamically adjusts task rates based on measured response times. Our extensive hardware testbed results on an NVIDIA RTX 3090 GPU and an AMD MI-100 GPU demonstrate that FC-GPU can provide better real-time performance even when the task execution times significantly increase at runtime.},
+journal      = {ACM Transactions on Embedded Computing Systems},
+month        = sep,
+articleno    = {155},
+numpages     = {25},
+keywords     = {GPU scheduling, real-time systems, embedded systems, feedback control}
 }
 
 
@@ -47,7 +45,7 @@ keywords = {GPU scheduling, real-time, embedded systems, feedback control}
   title={OptiCPD: Optimization For The Canonical Polyadic Decomposition Algorithm on GPUs}, 
   year={2023},
   pages={403-412},
-  url={https://ieeexplore.ieee.org/10196662}
+  url={https://ieeexplore.ieee.org/10196662},
   keywords={Tensors;Multicore processing;High performance computing;Optimal scheduling;Machine learning;Linear algebra;Parallel processing;CPD/PARAFAC;CPU;GPU;MTTKRP},
   doi={10.1109/IPDPSW59300.2023.00071}}
 
