--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -88,7 +88,7 @@ keywords     = {GPU scheduling, real-time systems, embedded systems, feedback co
   author={Ferraz, Oscar and Subramaniyan, Srinivasan and Chinthala, Ramesh and Andrade, Jo{\~a}o and Cavallaro, Joseph R and Nandy, Soumitra K and Silva, Vitor and Zhang, Xinmiao and Purnaprajna, Madhura and Falcao, Gabriel},
   journal={IEEE Communications Surveys \& Tutorials},
   abstract={Non-binary low-density parity-check (NB-LDPC) codes show higher error-correcting performance than binary low-density parity-check (LDPC) codes when the codeword length is moderate and/or the channel has bursts of errors. The need for high-speed decoders for future digital communications led to the investigation of optimized NB-LDPC decoding algorithms and efficient implementations that target high throughput and low energy consumption levels. We carried out a comprehensive survey of existing NB-LDPC decoding hardware that targets the optimization of these parameters. Even though existing NB-LDPC decoders are optimized with respect to computational complexity and memory requirements, they still lag behind their binary counterparts in terms of throughput, power and area optimization. This study contributes to an overall understanding of the state-of-the-art on application-specific integrated-circuit (ASIC), field-programmable gate array (FPGA) and graphics processing units (GPU) based systems, and highlights the current challenges that still have to be overcome on the path to more efficient NB-LDPC decoder architectures.},
-  doi={10.1109/COMST.2021.3126127}
+  doi={10.1109/COMST.2021.3126127},
   volume={24},
   number={1},
   google_scholar_id={qyhmnyLat1gC},
@@ -98,8 +98,6 @@ keywords     = {GPU scheduling, real-time systems, embedded systems, feedback co
   year={2021},
   publisher={IEEE}
 }
-
-
 @INPROCEEDINGS{9195258,
   author={Subramaniyan, Srinivasan and Ferraz, Oscar and Ashuthosh, M. R. and Krishna, Santosh and Wang, Guohui and Cavallaro, Joseph R. and Silva, Vitor and Falcao, Gabriel and Purnaprajna, Madhura},
   booktitle={2020 IEEE Workshop on Signal Processing Systems (SiPS)}, 
@@ -112,6 +110,7 @@ keywords     = {GPU scheduling, real-time systems, embedded systems, feedback co
   url={https://ieeexplore.ieee.org/document/9195258},
   keywords={Field programmable gate arrays;Graphics processing units;Measurement;Kernel;Decoding;Instruction sets;Parity check codes;design space exploration;roofline model;high-throughput;parallelism;low-power;FPGAs;GPUs;RTL;HLS;NB-LDPC decoding},
   doi={10.1109/SiPS50750.2020.9195258}}
+
 
 @INPROCEEDINGS{9114836,
   author={Ferraz, Oscar and Subramaniyan, Srinivasan and Wang, Guohui and Cavallaro, Joseph R. and Falcao, Gabriel and Purnaprajna, Madhura},
