--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,7 @@ doi          = {10.1145/3761812},
 google_scholar_id = {luGswuwAAAAJ},
 pdf          = {3761812.pdf},
 code         = {https://github.com/srinivasans74?tab=repositories},
-slides       = {https://github.com/srinivasans74.github.io/asset/slides/1-325-Subramaniyan-pres.pptx},
+slides       = {https://github.com/srinivasans74/srinivasans74.github.io/tree/main/assets/slides/1-325-Subramaniyan-pres.pptx},
 abstract     = {GPUs have recently been adopted in many real-time embedded systems. However, existing GPU scheduling solutions are mostly open-loop and rely on the estimation of worst-case execution time (WCET). Although adaptive solutions, such as feedback control scheduling, have been previously proposed to handle this challenge for CPU-based real-time tasks, they cannot be directly applied to GPUs, because GPUs have different and more complex architectures and so schedulable utilization bounds cannot apply to GPUs yet. In this article, we propose FC-GPU, the first feedback control GPU scheduling framework for real-time embedded systems. To model the GPU resource contention among tasks, we analytically derive a multi-input–multi-output (MIMO) system model that captures the impacts of task rate adaptation on the response times of different tasks. Building on this model, we design a MIMO controller that dynamically adjusts task rates based on measured response times. Our extensive hardware testbed results on an NVIDIA RTX 3090 GPU and an AMD MI-100 GPU demonstrate that FC-GPU can provide better real-time performance even when the task execution times significantly increase at runtime.},
 journal      = {ACM Transactions on Embedded Computing Systems},
 month        = sep,
@@ -92,7 +92,7 @@ keywords     = {GPU scheduling, real-time systems, embedded systems, feedback co
   doi={10.1109/COMST.2021.3126127},
   volume={24},
   number={1},
-  google_scholar_id={qyhmnyLat1gC},
+  google_scholar_id={https://scholar.google.com/citations?view_op=view_citation&hl=en&user=luGswuwAAAAJ&citation_for_view=luGswuwAAAAJ:qjMakFHDy7sC},
   pdf={example_pdf.pdf},
   pages={524--556},
   url={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9606216},
