--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@ number       = {5s},
 issn         = {1539-9087},
 url          = {https://doi.org/10.1145/3761812},
 doi          = {10.1145/3761812},
-google_scholar_id = {AAZF9b8AAAAAaO15gtyqeYGW2aL9djebVGB5EF0},
+google_scholar_id = {WF5omc3nYNoC},
 pdf          = {3761812.pdf},
 code         = {https://github.com/srinivasans74?tab=repositories},
 slides       = {https://github.com/srinivasans74/srinivasans74.github.io/tree/main/assets/slides/1-325-Subramaniyan-pres.pptx},
