--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,12 @@
 ---
 ---
-
 @inproceedings{10.1145/3769102.3772715,
 author = {Subramaniyan, Srinivasan and Joshi, Rudra and Wang, Xiaorui and Brocanelli, Marco},
 title = {SEEB-GPU: Early-Exit Aware Scheduling and Batching for Edge GPU Inference},
 year = {2025},
 isbn = {9798400722387},
 publisher = {Association for Computing Machinery},
+preview={seeb_gpu.jpg},
 address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3769102.3772715},
 doi = {10.1145/3769102.3772715},
@@ -34,6 +34,7 @@ address      = {New York, NY, USA},
 volume       = {24},
 number       = {5s},
 issn         = {1539-9087},
+preview ={fc.jpg},
 url          = {https://doi.org/10.1145/3761812},
 doi          = {10.1145/3761812},
 google_scholar_id = {WF5omc3nYNoC},
