--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -46,6 +46,7 @@ journal      = {ACM Transactions on Embedded Computing Systems},
 month        = sep,
 articleno    = {155},
 numpages     = {25},
+award={Recieved the Outstanding Paper award for FC-GPU at ESWEEK 2025},
 award_name= {Outstanding Paper},
 keywords     = {GPU scheduling, real-time systems, embedded systems, feedback control},  
 selected={true} 
