--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,12 +11,12 @@ address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3769102.3772715},
 doi = {10.1145/3769102.3772715},
 pdf = {SEC.pdf},
+abbr={SEC},
 slides= {SEC_2025_Presentation.pptx},
 booktitle = {Proceedings of the Tenth ACM/IEEE Symposium on Edge Computing},
 articleno = {9},
 numpages = {16},
 keywords = {edge inference, GPU resource management, early-exit DNNs},
-location = {the Hilton Arlington National Landing, Arlington, VA, USA},
 series = {SEC '25},
 selected={true} 
 }
@@ -35,6 +35,7 @@ volume       = {24},
 number       = {5s},
 issn         = {1539-9087},
 preview ={fc.jpg},
+abbr={EMOSOFT},
 url          = {https://doi.org/10.1145/3761812},
 doi          = {10.1145/3761812},
 google_scholar_id = {WF5omc3nYNoC},
@@ -61,6 +62,7 @@ selected={true}
   url={https://ieeexplore.ieee.org/abstract/document/10630927},
   slides={icdcs24_v4.pptx},
   paper={},
+  abbr={ICDCS},
   google_scholar_id = {ufrVoPGSRksC},
   abstract={Today's data centers often need to run various machine learning (ML) applications with stringent SLO (Service-Level Objective) requirements, such as inference latency. To that end, data centers prefer to 1) over-provision the number of servers used for inference processing and 2) isolate them from other servers that run ML training, despite both use GPUs extensively, to minimize possible competition of computing resources. Those practices result in a low GPU utilization and thus a high capital expense. Hence, if training and inference jobs can be safely co-located on the same GPUs with explicit SLO guarantees, data centers could flexibly run fewer training jobs when an inference burst arrives and run more afterwards to increase GPU utilization, reducing their capital expenses. In this paper, we propose GPUColo, a two-tier co-location solution that provides explicit ML inference SLO guarantees for co-located GPUs. In the outer tier, we exploit GPU spatial sharing to dynamically adjust the percentage of active GPU threads allocated to spatially co-located inference and training processes, so that the inference latency can be guaranteed. Because spatial sharing can introduce considerable overheads and thus cannot be conducted at a fine time granularity, we design an inner tier that puts training jobs into periodic sleep, so that the inference jobs can quickly get more GPU resources for more prompt latency control. Our hardware testbed results show that GPUColo can precisely control the inference latency to the desired SLO, while maximizing the throughput of the training jobs co-located on the same GPUs. Our large-scale simulation with a 57-day real-world data center trace (6500 GPUs) also demonstrates that GPU Colo enables latency-guaranteed inference and training co-location. Consequently, it allows 74.9 % of GPUs to be saved for a much lower capital expense.},  
   pages={473-484},
@@ -75,6 +77,7 @@ selected={true}
   booktitle={2023 IEEE International Parallel and Distributed Processing Symposium Workshops (IPDPSW)}, 
   title={OptiCPD: Optimization For The Canonical Polyadic Decomposition Algorithm on GPUs}, 
   year={2023},
+  abbr={IPDPSW},
   pages={403-412},
   url={https://ieeexplore.ieee.org/10196662},
   google_scholar_id={Tyk-4Ss8FVUC},
@@ -87,6 +90,7 @@ selected={true}
   title={Enabling High-Level Design Strategies for High-Throughput and Low-Power NB-LDPC Decoders}, 
   year={2023},
   volume={40},
+  abbr={Design & Test},
   number={1},
   pages={85-95},
   url={https://ieeexplore.ieee.org/document/9869892},
@@ -103,6 +107,7 @@ selected={true}
   year={2022},
   volume={},
   number={},
+  abbr={VLSID},
   pages={102-107},
   url={https://ieeexplore.ieee.org/document/9885949},
   abstract={Matrix Multiplication has gained importance due to its wide usage in Deep Neural Networks. The presence of sparsity in matrices needs special considerations to avoid redundancy in computations and memory accesses. Sparsity becomes relevant in the choice of compression format for storage and memory access. In addition to compression format, the choice of the algorithm also influences the performance of the matrix multiplier. The interplay of algorithm and compression formats results in significant variations in several performance parameters such as execution time, memory, and total energy consumed. This paper presents MAPPARAT, a custom FPGA-based hardware accelerator for sparse×dense matrix multiplication. Our analysis show that the choice of the compression format is heavily dependent on sparsity of the input matrices. We present two variants of MAPPARAT based on the algorithm used for sparse×dense matrix multiplication, viz., row-wise and column-wise product. A difference in speedup of 2.5× and a difference in energy consumption by about 2.6× is seen between the two variants. We show that an intelligent choice of algorithm and compression format based on the variations in sparsity, matrix dimensions, and device specifications is necessary for performance acceleration. For identical sparse matrices, a speedup of up to 3.6× is observed, when the dense format is chosen for one of the matrices for sparsity in the range of 30% to 90%. MAPPARAT on a resource-constrained device shows performance efficiency of up to 7 GOPs-per-second-per-watt.},
@@ -121,19 +126,21 @@ selected={true}
   doi={10.1109/COMST.2021.3126127},
   volume={24},
   number={1},
+  abbr={COMST},
   google_scholar_id={qjMakFHDy7sC},
   pdf={example_pdf.pdf},
   pages={524--556},
   url={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9606216},
   year={2021},
   publisher={IEEE},
-  selected={true} 
+  selected={false} 
 }
 @INPROCEEDINGS{9195258,
   author={Subramaniyan, Srinivasan and Ferraz, Oscar and Ashuthosh, M. R. and Krishna, Santosh and Wang, Guohui and Cavallaro, Joseph R. and Silva, Vitor and Falcao, Gabriel and Purnaprajna, Madhura},
   booktitle={2020 IEEE Workshop on Signal Processing Systems (SiPS)}, 
   title={Pushing the Limits of Energy Efficiency for Non-Binary LDPC Decoders on GPUs and FPGAs}, 
   year={2020},
+  abbr={SiPS},
   pages={1-6},
   abstract={Signal processing hardware designers of Low-Density Parity-Check (LDPC) decoders used in modern optical communications are confronted with the need to perform multi-parametric design space exploration, targeting very high throughput (hundreds of Mbit/s) and low-power systems. This work addresses the needs of current designers of dedicated GF(2m) NB-LDPC decoders that necessitate robust approaches for dealing with the ever-increasing demand for higher BER performance. The constraints pose tremendous pressure on the on-chip design of irregular data structures and micro-circuit implementation for supporting the complex Galois field mathematics and communications of hundreds of check nodes with hundreds of variable node processors. We have developed kernels targeting GPU and FPGA (HLS and its equivalent RTL) descriptions of this class of complex circuits for comparing area, frequency of operation, latency, parallelism and throughput. Exploiting techniques such as using custom bit-widths, pipelining, loop-unrolling, array-partitioning and the replication of compute units, results in considerably faster design cycles and demands less non-recurring engineering effort. We report a throughput performance of 800 Mbps for the FPGA case.},
   google_scholar_id={9yKSN-GCB0IC},
@@ -148,6 +155,7 @@ selected={true}
   booktitle={2020 IEEE 28th Annual International Symposium on Field-Programmable Custom Computing Machines (FCCM)}, 
   title={Gbit/s Non-Binary LDPC Decoders: High-Throughput using High-Level Specifications}, 
   year={2020},
+  abbr={FCCM},
   abstract={It is commonly perceived that an HLS specification targeted for FPGAs cannot provide throughput performance in par with equivalent RTL descriptions. In this work we developed a complex design of a non-binary LDPC decoder, that although hard to generalise, shows that HLS provides sufficient architectural refinement options. They allow attaining performance above CPU- and GPU-based ones and excel at providing a faster design cycle when compared to RTL development.},
   pages={226-226},
   google_scholar_id={d1gkVwhDpl0C},
